--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>devinatividade</title>
+    <title>atividade</title>
+  
 </head>
 <body>
+ 
+ <h1>Dicionario Html</h1>
+
+ <h2>Style</h2>
+ <ul>
+   <li>A style tag é usada para definir informações de estilo (CSS) para um documento. Dentro do style elemento, você especifica como os elementos HTML devem ser renderizados em um navegador. O style elemento deve ser incluído dentro da head seção do documento.</li>
+ </ul>
+ 
+
+ <h2>!DOCTYPE</h2>
+ <ul>
+   <li>todos os documentos HTML devem começar com uma !DOCTYPEde claração. A declaração não é uma tag HTML. É uma "informação" para o navegador sobre qual tipo de documento esperar.</li>
+ </ul>
     
+
+ <h2> P </h2>
+ <ul>
+   <li>"p" tag define um parágrafo.</li>
+ </ul>
+  
+
+ <h2> DIV </h2>
+ <ul>
+   <li>A div tag define uma divisão ou uma seção em um documento HTML. A div tag é usada como um contêiner para elementos HTML, que são então estilizados com CSS ou manipulados com JavaScript.</li>
+ </ul>
+
+ <h2> NAV </h2>
+ <ul>
+   <li>A nav tag define um conjunto de links de navegação. Observe que NÃO todos os links de um documento devem estar dentro de um nav elemento. O nav elemento é destinado apenas para os principais blocos de links de navegação.</li>
+ </ul>
+    
+  <h2></h2>
+
 </body>
 </html>
