commit atualização html

--- a/index.html
+++ b/index.html
@@ -5,40 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>atividade</title>
   
+    <style>
+      body {
+          font-family: Arial, sans-serif;
+          background-color: #f9f9f9;
+          margin: 0;
+          padding: 20px;
+          color: #333;
+      }
+      h1 {
+          color: #131313;
+          text-align: center;
+      }
+      h2 {
+          color: #a00e96;
+          border-bottom: 2px solid #a00e96;
+          padding-bottom: 5px;
+      }
+      ul {
+          list-style-type: none;
+          padding-left: 0;
+      }
+      ul li {
+          background-color: #fff;
+          margin: 10px 0;
+          padding: 15px;
+          border: 1px solid #ddd;
+          border-radius: 5px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+  </style>
+
+
 </head>
 <body>
  
  <h1>Dicionario Html</h1>
 
- <h2>Style</h2>
+ <h2> style </h2>
  <ul>
    <li>A style tag é usada para definir informações de estilo (CSS) para um documento. Dentro do style elemento, você especifica como os elementos HTML devem ser renderizados em um navegador. O style elemento deve ser incluído dentro da head seção do documento.</li>
  </ul>
  
 
- <h2>!DOCTYPE</h2>
+ <h2>!DOCTYPE </h2>
  <ul>
-   <li>todos os documentos HTML devem começar com uma !DOCTYPEde claração. A declaração não é uma tag HTML. É uma "informação" para o navegador sobre qual tipo de documento esperar.</li>
+   <li>todos os documentos HTML devem começar com uma !DOCTYPE de claração. A declaração não é uma tag HTML. É uma "informação" para o navegador sobre qual tipo de documento esperar.</li>
  </ul>
     
 
- <h2> P </h2>
+ <h2> p </h2>
  <ul>
    <li>"p" tag define um parágrafo.</li>
  </ul>
   
 
- <h2> DIV </h2>
+ <h2> div </h2>
  <ul>
    <li>A div tag define uma divisão ou uma seção em um documento HTML. A div tag é usada como um contêiner para elementos HTML, que são então estilizados com CSS ou manipulados com JavaScript.</li>
  </ul>
 
- <h2> NAV </h2>
+ <h2> nav </h2>
  <ul>
    <li>A nav tag define um conjunto de links de navegação. Observe que NÃO todos os links de um documento devem estar dentro de um nav elemento. O nav elemento é destinado apenas para os principais blocos de links de navegação.</li>
  </ul>
     
-  <h2></h2>
+  <h2> a </h2>
+  <ul>
+    <li>A a tag define um hiperlink, que é usado para vincular de uma página a outra.</li>
+  </ul>
+
+   <h2> center </h2>
+   <ul>
+    <li> O center é uma tag para centralizar o texto mas uma curiosidade dela é que foi usada so até h4 para centralizar o texto.</li>
+   </ul>
+
+    <h2> ul </h2>
+   <ul>
+     <li>A ul tag define uma lista não ordenada (com marcadores).</li>
+   </ul>
+   
+   <h2> script </h2>
+  <ul>
+    <li>A script tag é usada para incorporar um script do lado do cliente (JavaScript).</li>
+  </ul>
+  
+  <h2> body </h2>
+  <ul>
+    <li>A body tag define o corpo do documento.</li>
+  </ul>
+ 
+  <h2> img </h2>
+  <ul>
+    <li>A img Insere uma imagem no documento.</li>
+  </ul>
 
 </body>
 </html>
